# Drawbridge

./: .gitignore  README.md  main.py  pyproject.toml
api/: __init__.py  api.py  app.py  config.py  data_validation.py  state.py  users.py  video.py
config/: __init__.py  config.json  config_manager.py  schemas.py
database/: create_db.py  data_operations.py  test.py
face_recognition/: __init__.py  drawing.py  embeddings.py  face_recognizer.py  liveness.py  main.py  overlay.py
frontend/: index.html  script.js  style.css
frontend/scripts/: config.js  users.js  video.js
frontend/styles/: main.css  users.css  video.css
hardware_integration/: ServoOperator.ino  arduino.py  arduino_handler.py  hardware_bridge.py  integrator.py  lock_controller.py  mock_arduino_handler.py
liveness/: __init__.py  blink.py  liveness_manager.py
notifications/: __init__.py  email.py  notifcation.py  notification.py  notification_manager.py  notification_util.py  sms.py
runtime_services/: embedding_manager.py  state.py
utils/: __init__.py  access_level.py  enums.py  schemas.py
