[project]
name = "lock-override-face-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client>=2.182.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "insightface>=0.7.3",
    "mediapipe>=0.10.21",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.11.0.86",
    "twilio>=9.8.1",
]
